v2.0.1 - Compilation Target Switch + EXE Runnable